在`Options`中指定等待策略

--- a/config_damai_hqs_bj.json
+++ b/config_damai_hqs_bj.json
@@ -24,9 +24,9 @@
     ],
     "driver_path": "./driver/124/chromedriver-mac-arm64/chromedriver",
     "damai_url": "https://www.damai.cn/",
-    "target_url": "https://m.damai.cn/shows/item.html?itemId=785421839703&spm=a2o71.search.list.ditem_0",
+    "target_url": "https://m.damai.cn/shows/item.html?from=def&itemId=787670918818&sqm=dianying.h5.unknown.value&spm=a2o71.category_singconcert.floor1.item_6",
     "auto_buy": "true",
-    "auto_buy_time": "12:15:00",
+    "auto_buy_time": "09:15:00",
     "retry_interval": "2",
     "proxy": "false",
     "proxy_ip": "127.0.0.1",
